# space-dodger-deluxe

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
assets/: README.md
assets/music/: ATTRIBUTION.md
docs/: ARCHITECTURE.md  LEARNING_PLAN_RU.md
include/: Asteroid.hpp  Bullet.hpp  Config.hpp  EnemyProjectile.hpp  Game.hpp  Particle.hpp  Pickup.hpp  Player.hpp  RaylibCompat.hpp  Starfield.hpp  Storage.hpp  Utils.hpp  WaveSystem.hpp
platform/android/: README.md  settings.gradle
platform/android/app/: build.gradle
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/cpp/: CMakeLists.txt
platform/android/app/src/main/res/values/: styles.xml
platform/ios/: CMakeLists.txt  README.md  build_ios.sh
scripts/: build_release.ps1  build_release.sh  check_mobile_env.sh
src/: Asteroid.cpp  Bullet.cpp  EnemyProjectile.cpp  Game.cpp  Particle.cpp  Pickup.cpp  Player.cpp  Starfield.cpp  Storage.cpp  WaveSystem.cpp  main.cpp
tests/: UnitTests.cpp
